# bitbar-version

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: config.rs  data.rs  github.rs  main.rs  version.rs
