[package]
name = "bitbar-version"
version = "0.1.7"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[build-dependencies]
git2 = "0.18"
thiserror = "1.0.60"

[dependencies]
bitbar = { version = "0.9", default-features = false, features = ["base64", "tokio"] }
plist = "1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls", "trust-dns"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.60"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", version = "0.14.0", features = ["serde", "serde_json"] }
xdg = "2.5.2"
