[package]
name = "bitbar-version"
version = "0.1.9"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2024"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[build-dependencies]
git2 = "0.20"
thiserror = "2"

[dependencies]
bitbar = { version = "0.10", default-features = false, features = ["base64", "tokio"] }
chrono = "0.4.38"
mimalloc = "0.1.48"
plist = "1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls", "trust-dns"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
serde_with = "3.12.0"
thiserror = "2"
tokio = { version = "1.40.0", features = ["time"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["reqwest", "serde_json"] }
xdg = "3"
